code refactoring: renaming components and changing theme

--- a/src/components/SignUp/package.json
+++ b/src/components/SignUp/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "Page",
+  "name": "SignUp",
   "version": "0.0.0",
   "private": true,
-  "main": "./Page.js"
+  "main": "./SignUp.js"
 }
